--- a/index.html
+++ b/index.html
@@ -63,6 +63,54 @@
                 <li><a href="/" class="sign-out">Sign out</a></li>
             </ul>
         </div>
+
+        <div class="order-container inactive">
+            <div>
+                <div class="order-header">
+                    <img src="./icons/flechita.svg" alt="">
+                    <h1>Shopping cart</h1>
+                </div>
+                <div class="order-products">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/1863621/pexels-photo-1863621.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                            alt="product">
+                    </figure>
+                    <p>Succulent</p>
+                    <p>$120,00</p>
+                    <img src="./icons/icon_close.png" alt="close" class="delete">
+                </div>
+                <div class="order-products">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/9130800/pexels-photo-9130800.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                            alt="product">
+                    </figure>
+                    <p>Succulent</p>
+                    <p>$120,00</p>
+                    <img src="./icons/icon_close.png" alt="close" class="delete">
+                </div>
+                <div class="order-products">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/6231758/pexels-photo-6231758.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                            alt="product">
+                    </figure>
+                    <p>Succulent</p>
+                    <p>$120,00</p>
+                    <img src="./icons/icon_close.png" alt="close" class="delete">
+                </div>
+
+            </div>
+            <div>
+                <div class="order-content">
+                    <p>
+                        <span>Total</span>
+                    </p>
+                    <p>$360,00</p>
+                </div>
+                <button class="primary-button checkout-button">
+                    <span>Checkout</span>
+                </button>
+            </div>
+        </div>
     </nav>
     <script src="./script.js"></script>
 </body>
