--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
             </div>
         </div>
     </nav>
+
+    <section class="main-container">
+        <div class="cards-container">
+        </div>
+    </section>
+
     <script src="./script.js"></script>
 </body>
 
